--- a/src/style.css
+++ b/src/style.css
@@ -3,6 +3,7 @@
 html,
 body {
   margin: 0;
+  padding: 0;
   height: 100%;
 }
 #map {
@@ -10,4 +11,12 @@ body {
   top: 0;
   bottom: 0;
   width: 100%;
+}
+#app {
+  font-family: Avenir, Helvetica, Arial, sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  text-align: center;
+  color: #2c3e50;
+  margin-top: 60px;
 }
